Issue Image Caption Alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11824,7 +11824,7 @@ h1,
 
 .article-image-author {
   color: #384043;
-  float: right;
+  /*float: right;*/
   font-style: italic;
   line-height: 20px;
   margin-top: 5px;
@@ -11855,7 +11855,7 @@ figcaption.article-image-caption {
   font-family: 'Open Sans Condensed';
   color: #9493a5;
   letter-spacing: 0.4px;
-  text-align: right;
+  text-align: left;
   line-height: 1.3em;
   font-size: 0.8em;
   margin-top: 5px;
