--- a/resources/assets/sass/_home.scss
+++ b/resources/assets/sass/_home.scss
@@ -177,7 +177,7 @@
 
 .article-image-author {
   color: #384043;
-  float: right;
+  /*float: right;*/
   font-style: italic;
   line-height: 20px;
   margin-top: 5px;
@@ -213,7 +213,7 @@ figcaption.article-image-caption {
   font-family: 'Open Sans Condensed';
   color: #9493a5;
   letter-spacing: 0.4px;
-  text-align: right;
+  text-align: left;
   line-height: 1.3em;
   font-size: 0.8em;
   margin-top:  5px;
